--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/51b519abc8.js" crossorigin="anonymous"></script>
 </head>
@@ -18,7 +18,7 @@
     <section class="box">
         <img class="me" src="images/CC_20220923_172741.png" alt="Diego Palones">
         <h1 class="my_name">Diego Palones</h1>
-        <h2>"Programador de pacotilla"</h2><br>
+        <h2>"Intentando programar"</h2><br>
         <p class="vainas"><b>«Es increíble cómo se puede ser tan feliz durante tantos años, en medio de tantas peloteras, de tantas vainas, carajo, sin saber en realidad si eso es amor o no»</b></p>
 
     </div>
@@ -27,7 +27,7 @@
 
     <div class="flex-social">
 
-        <a class="a-hover" href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a class="a-hover" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         <a class="a-hover" href="https://www.instagram.com/diego.palones/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         <a class="a-hover" href="#"><i class="fa-brands fa-linkedin"></i></a>
         <a class="a-hover" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
