añadida página bio

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contact.css">
     <title>Contacto</title>
 </head>
 <body>
+    <section class="form-register">
+        <h4>Formulario de registro</h4>
+        <input class="control-elements" type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre">
+        <input class="control-elements" type="text" name="apellidos" id="apellidos" placeholder="Escribe tus apellidos">
+        <input class="control-elements" type="email" name="correo" id="correo" placeholder="Escribe tu correo">
+        <input class="control-elements" type="email" name="rep-correo" id="rep-correo" placeholder="Repite tu correo">
+        <input class="control-elements" type="password" name="contraseña" id="contraseña" placeholder="Escribe tu contraseña">
+        <input class="control-elements" type="password" name="rep-contraseña" id="rep-contraseña" placeholder="Repite tu contraseña">
+        <input class="submit" type="submit" value="Regístrame">
+    </section>
     
 </body>
 </html>
