--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,14 @@
     <title>Contacto</title>
 </head>
 <body>
+
+    <header class="flex-container">
+        <a class="link-heather" href="bio.html" target="">Biografía</a>
+        <a class="link-heather" href="portfolio.html" target="">Portfolio</a>
+        <a class="link-heather" href="index.html" target="">Home</a>
+
+    </header>
+
     <section class="form-register">
         <h4>Formulario de registro</h4>
         <input class="control-elements" type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre">
