--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header class="flex-container">
-        <a class="link-heather" href="bio.html" target="_blank">Biografía</a>
-        <a class="link-heather" href="portfolio.html" target="_blank">Portfolio</a>
-        <a class="link-heather" href="contact.html" target="_blank">Contacto</a>
+        <a class="link-heather" href="bio.html" target="">Biografía</a>
+        <a class="link-heather" href="portfolio.html" target="">Portfolio</a>
+        <a class="link-heather" href="contact.html" target="">Contacto</a>
     </header>
 
     <section class="box">
